--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "copy-webpack-plugin": "^10.1.0",
     "eslint": "^8.42.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.5.0",
     "javascript-obfuscator": "^4.0.0",
     "prettier": "^2.5.1",
@@ -51,8 +52,5 @@
     "webpack-merge": "^5.8.0",
     "webpack-obfuscator": "^3.5.0",
     "workbox-webpack-plugin": "^6.4.2"
-  },
-  "dependencies": {
-    "gh-pages": "^6.1.1"
   }
 }
